@@ -1,0 +1,17 @@
+  prompt "subscribe nop:        "
+
+  ${EZBIN}/ezmlm-sub "$DIR" "$SENDER"
+
+  DEFAULT="subscribe"
+  LOCAL="${LOC}-${DEFAULT}"
+  ${EZBIN}/ezmlm-manage "$DIR" <"$TMP" >"$ERR" 2>&1 || \
+  fatal "failed to produce subscribe nop"
+
+  grephdr_manage
+  grephdr Subject: "Already subscribed to ${LOC}@${HOST}"
+  grephdr_empty
+  grepbody I\'ve been unable to carry out your request: The address
+  grepbody test@example.org
+  grepbody was already on the ${LOC} mailing list when I received
+
+  ${ECHO} OK
