@@ -1,5 +1,7 @@
   prompt "unsubscribe probe:    "
 
+  ${EZBIN}/ezmlm-sub "$DIR" "$SENDER"
+
   DEFAULT="unsubscribe"
   LOCAL="${LOC}-${DEFAULT}"
   ${EZBIN}/ezmlm-manage "$DIR" <"$TMP" >"$ERR" 2>&1 || \
