@@ -23,6 +23,9 @@ ezmlm-idx-7.1.0, ????-??-??
 
 - Added support for wildcard addresses in all address databases.
 
+- Modified the (un)subscribe procedure to not require confirmation
+  before telling the sender they were already on (or off) the list.
+
 ezmlm-idx-7.0.2, 2009-08-09
 ===========================
 
